--- a/inst/shiny-apps/scseq/template.html
+++ b/inst/shiny-apps/scseq/template.html
@@ -48,11 +48,35 @@
         <div class="col-sm-6">
           <!-- analysis selection (e.g. sjia_pbmcs2) -->
           <div class="form-group selectize-fh">
-            <label class="control-label" for="selected_anal">Selected analysis:</label>
-            <div>
-              <select id="selected_anal"></select>
-              <script type="application/json" data-for="selected_anal" data-nonempty="">{}</script>
+            <label class="control-label" for="selected_anal">Select a dataset:</label>
+            <div class="input-group">
+              <div>
+                <select id="selected_anal"></select>
+                <script type="application/json" data-for="selected_anal" data-nonempty="">{}</script>
+              </div>
+              <span class="input-group-btn">
+                {{ show_integration }}
+              </span>
             </div>
+          </div>
+          <!-- integrate datasets selection (e.g. ctrl and test datasets to combine) -->
+          <div id='integration' class="integration-container">
+            <div class="form-group">
+              <label class="control-label" for="test_integration">Test datasets:</label>
+              <div>
+                <select id="test_integration" class="shiny-bound-input shinyjs-resettable selectized" multiple="multiple" data-shinyjs-resettable-id="test_integration" data-shinyjs-resettable-type="Select" data-shinyjs-resettable-value="&quot;&quot;" style="display: none;" tabindex="-1"></select>
+                <script type="application/json" data-for="test_integration">{}</script>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label" for="ctrl_integration">Control datasets:</label>
+              <div>
+                <select id="ctrl_integration" class="shiny-bound-input shinyjs-resettable selectized" multiple="multiple" data-shinyjs-resettable-id="ctrl_integration" data-shinyjs-resettable-type="Select" data-shinyjs-resettable-value="&quot;&quot;" style="display: none;" tabindex="-1"></select>
+                <script type="application/json" data-for="ctrl_integration">{}</script>
+              </div>
+            </div>
+            <label class="control-label" ></label>
+            {{ submit_integration }}
           </div>
           <br/>
           <!-- cluster (e.g. cell type) selection -->
