integration analyses either control or test (not both) #87
Former-commit-id: b8bd2ea37f4b65aa612662d6820c615544bffa0a
Former-commit-id: 1c1c18ab1af9bbae4078eee99dc5f23ccdcbdbf3
Former-commit-id: 04c0195c8feb7434e5922e1678c8aa0320adbe75

--- a/inst/shiny-apps/scseq/template.html
+++ b/inst/shiny-apps/scseq/template.html
@@ -60,21 +60,9 @@
             </div>
           </div>
           <!-- integrate datasets selection (e.g. ctrl and test datasets to combine) -->
-          <div id='integration' class="integration-container">
-            <div class="form-group">
-              <label class="control-label" for="test_integration">Test datasets:</label>
-              <div>
-                <select id="test_integration" class="shiny-bound-input shinyjs-resettable selectized" multiple="multiple" data-shinyjs-resettable-id="test_integration" data-shinyjs-resettable-type="Select" data-shinyjs-resettable-value="&quot;&quot;" style="display: none;" tabindex="-1"></select>
-                <script type="application/json" data-for="test_integration">{}</script>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label" for="ctrl_integration">Control datasets:</label>
-              <div>
-                <select id="ctrl_integration" class="shiny-bound-input shinyjs-resettable selectized" multiple="multiple" data-shinyjs-resettable-id="ctrl_integration" data-shinyjs-resettable-type="Select" data-shinyjs-resettable-value="&quot;&quot;" style="display: none;" tabindex="-1"></select>
-                <script type="application/json" data-for="ctrl_integration">{}</script>
-              </div>
-            </div>
+          <div id='integration' class="integration-container" style="display: none;">
+            {{ test_integration }}
+            {{ ctrl_integration }}
             <label class="control-label" ></label>
             {{ submit_integration }}
           </div>
