init validation for integration #87
Former-commit-id: 91c252afd69be6534ded50a2d8cab3862ec03afd
Former-commit-id: de39b4be43a8262d352af45654d6bb851b737277
Former-commit-id: 4661a975b8953a889d737e6c80822a0cfafafc1f

--- a/inst/shiny-apps/scseq/template.html
+++ b/inst/shiny-apps/scseq/template.html
@@ -64,7 +64,10 @@
             {{ test_integration }}
             {{ ctrl_integration }}
             <label class="control-label" ></label>
-            {{ submit_integration }}
+            <div class="validate-input" id = "submit-integration-container">
+              {{ submit_integration }}
+              <span class="help-block">Username is taken</span>
+            </div>
           </div>
           <br/>
           <!-- cluster (e.g. cell type) selection -->
