cleanup validation classes for #87
Former-commit-id: 2275e072843c2267a3516f383a5f38809a0c9392
Former-commit-id: 4ae175ad26015f5b2e2e0a54cd24d0c2a7de7d5f
Former-commit-id: 954fd78aa16da9946b43285246fe7c4cfd587e66

--- a/inst/shiny-apps/scseq/template.html
+++ b/inst/shiny-apps/scseq/template.html
@@ -60,11 +60,11 @@
             </div>
           </div>
           <!-- integrate datasets selection (e.g. ctrl and test datasets to combine) -->
-          <div id='integration' class="integration-container" style="display: none;">
+          <div id='integration-form' class="well-form" style="display: none;">
             {{ test_integration }}
             {{ ctrl_integration }}
-            <label class="control-label" ></label>
-            <div class="validate-input" id = "submit-integration-container">
+            <label class="control-label" ></label> 
+            <div class="validate-wrapper">
               {{ submit_integration }}
               <span class="help-block">Username is taken</span>
             </div>
