run integration and save results for #87
Former-commit-id: 18555787b6e370c50fbff508b360adb9105ba23e
Former-commit-id: 79e5a88328cb57dc6cee511c648da57efd0c7708
Former-commit-id: 36b81ca96c612eb413df6338ce103125a565416d

--- a/inst/shiny-apps/scseq/template.html
+++ b/inst/shiny-apps/scseq/template.html
@@ -61,6 +61,7 @@
           </div>
           <!-- integrate datasets selection (e.g. ctrl and test datasets to combine) -->
           <div id='integration-form' class="well-form" style="display: none;">
+            {{ integration_name }}
             {{ test_integration }}
             {{ ctrl_integration }}
             <label class="control-label" ></label> 
