update navbar styling
Former-commit-id: 47af208c7d615fef2c7904a58c8ee49280a172f9
Former-commit-id: 7157e7672ba387f3ebc30ea09d67138a8c94b9de
Former-commit-id: 67675cf6ac86d291c5614ab95d2c4325f0516196

--- a/inst/shiny-apps/scseq/navbar.html
+++ b/inst/shiny-apps/scseq/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-static-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <span class="navbar-brand">
+      <span class="navbar-brand" title="drugseqr">
           <span class="brand-icons">
             <i class="fas fa-dna"></i>
             <i class="fas fa-tablets"></i>
