--- a/inst/shiny-apps/scseq/navbar.html
+++ b/inst/shiny-apps/scseq/navbar.html
@@ -10,13 +10,13 @@
     </div>
     <ul class="nav navbar-nav" data-tabsetid="1823">
       <li class="">
-        <a href="#tab-1823-1" data-toggle="tab" data-value="Datasets" aria-expanded="true">Datasets</a>
+        <a href="#datasets-tab" data-toggle="tab" data-value="Datasets" aria-expanded="true">Datasets</a>
       </li>
       <li class="active">
-        <a href="#tab-1823-1" data-toggle="tab" data-value="Single Cell Exploration" aria-expanded="true">Single Cell Exploration</a>
+        <a href="#single-cell-tab" data-toggle="tab" data-value="Single Cell Exploration" aria-expanded="true">Single Cell Exploration</a>
       </li>
       <li class="">
-        <a href="#tab-1823-2" data-toggle="tab" data-value="Contrasts" aria-expanded="false">Contrasts</a>
+        <a href="#contrasts-tab" data-toggle="tab" data-value="Contrasts" aria-expanded="false">Contrasts</a>
       </li>
       <li class="">
         <a href="#tab-1823-3" data-toggle="tab" data-value="Pathways" aria-expanded="false">Pathways</a>
