init shiny app testing; move single-cell page to R/
Former-commit-id: 376f8ca5bf55eeafd8e1f1d534ecc2be22fa5021
Former-commit-id: d2e016cffb7dc993cb496e09c7b4e594d3e5354d
Former-commit-id: f697428c7c85956640756e438547a79a3c89fa41

--- a/inst/app/navbar.html
+++ b/inst/app/navbar.html
@@ -3,8 +3,8 @@
     <div class="navbar-header">
       <span class="navbar-brand" title="drugseqr">
           <span class="brand-icons">
-            <i class="fas fa-dna"></i>
-            <i class="fas fa-tablets"></i>
+            <i class="glyphicon glyphicon-leaf"></i>
+              drugseqr
           </span>
       </span>
     </div>
