init styling to compare samples for integrated #70
Former-commit-id: aa1abfe1e93531091370c74ac0982aa928c20520
Former-commit-id: 2d00d316b4acee6ec2fc71ca93075ff00900ce55
Former-commit-id: 91f079366d4b1f55ff2f7621ed18799a55399d67

--- a/inst/app/navbar.html
+++ b/inst/app/navbar.html
@@ -13,10 +13,10 @@
         <a href="#datasets-tab" data-toggle="tab" data-value="Datasets" aria-expanded="true">Datasets</a>
       </li>
       <li class="active">
-        <a href="#single-cell-tab" data-toggle="tab" data-value="Single Cell Exploration" aria-expanded="true">Single Cell Exploration</a>
+        <a href="#single-cell-tab" data-toggle="tab" data-value="Single Cell Data" aria-expanded="true">Single Cell Exploration</a>
       </li>
       <li class="">
-        <a href="#contrasts-tab" data-toggle="tab" data-value="Contrasts" aria-expanded="false">Contrasts</a>
+        <a href="#contrasts-tab" data-toggle="tab" data-value="Bulk Data" aria-expanded="false">Contrasts</a>
       </li>
       <li class="">
         <a href="#tab-1823-3" data-toggle="tab" data-value="Pathways" aria-expanded="false">Pathways</a>
